2018-10-xx 1.7.0 [xxxxxxx]
  + tree view allows to navigate interactively
  + new sibling and new child diagrams can be created in tree view
  + when deleting a diagram, unfocused windows show parent diagram
2018-10-15 1.6.1 [3d25d8a]
  + debian archives are now build by dh_make and debuild
  + fix for only partly visible background text
2018-10-01 1.6.0 [4151f80]
  + element configuration moved from bottom area to the right of the window
  + tree view shows current diagram in hierarchy
2018-08-26 1.5.1 [81c92e6]
  . no automatic database upgrades anymore, use -f parameter
  + fix for persisting moved relationships in sequence and timing diagrams
2018-08-25 1.5.0 [b1fe3ca]
  + Sequence and timing diagrams show messages/transitions
  + In sequence and timing diagrams, messages/transitions can be moved
  + Box and list diagrams hide all relationships
  + List diagrams soft the classifiers by list_order now
  . Database format changed (list_oder field for classifiers), up- and downwards compatible.
2018-05-11 1.4.0 [66861a9]
  + relationships can connect to ports
  + the repair-database function can detect and repair broken focused_feature keys in diagramelements
  + the repair-database function can detect and repair broken from/to_feature keys in relationships
2018-04-01 1.3.0 [7bc9dff]
  + lifelines are created and removed automatically for timing, sequence and communication diagrams
  + lifelines are drawn and can be selected/edited
  + ports can be created/selected/edited and are drawn
2018-03-04 1.2.0 [78421df]
  + all relations to/from multiple classifier instances are drawn
2018-01-23 1.1.0 [086e559]
  + greyed-out classifiers also grey-out their contained features
  . sqlite updated from 3.10.2 to 3.21.0
  . Database format changed.
    A newer crystal_facet_uml can still open older database files (and immediately update the file format).
    Older crystal_facet_uml cannot open database files created or opened by a newer crystal_facet_uml!